--- a/.env
+++ b/.env
@@ -57,7 +57,10 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DB_DATABASE=mongodb+srv://ebsmanjitsingh:1234@cluster0.rdmoakd.mongodb.net/
+# DB_DATABASE=mongodb+srv://ebsmanjitsingh:1234@cluster0.rdmoakd.mongodb.net/
+
+DB_DATABASE=mongodb+srv://harpreet:ebullientsoft1@cluster.2ksky9v.mongodb.net/
+
 MONGODB_DB=Unify_database
 
 
